V4: Fixed hero section overflow

--- a/src/app/public-layout/public-layout.css
+++ b/src/app/public-layout/public-layout.css
@@ -79,3 +79,7 @@
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.8);
   }
 }
+
+.margin-top {
+  margin-top: 82px;
+}
